--- a/rgaa-test/formulaire.html
+++ b/rgaa-test/formulaire.html
@@ -39,6 +39,8 @@
 	<h3>formulaire js classique</h3>
 	<label for='prenom'>prénom</label>
 	<input type='text' id='prenom' name='prenom' />
+	<label for='email'>couriel</label>
+	<input type='email' id='email' />
 	<select>
 		<optgroup label='voyels'>
 		<option value='b'>option b</option>
