--- a/piece.html
+++ b/piece.html
@@ -8,41 +8,43 @@
 <meta name='link' content='o'/>
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/structure.css'/>
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/perso.css' media='screen'/>
-<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/piece.css'/>
+<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/pave.css'/>
 <script type='text/javascript' src='file:///C:/wamp64/www/site-dp/library-js/piece.js'></script>
 <style type='text/css'>
-
+body {
+	perspective: 800px;
+	perspective-origin: 50% 100px;
+}
 piece >*:nth-child(1), piece >*:nth-child(4), piece >*:nth-child(5) { background-color: coral; }
 piece >*:nth-child(2) { background-color: rosybrown; }
 fenetre { background-color: #0CF; }
-piece >*:nth-child(4).fenetre:before, piece >*:nth-child(5).fenetre:before {
-	content: "";
-	background-color: rosybrown;
+pave, toblerone, trect {
+	margin-left: 4cm;
+	margin-top: 4cm;
+	--fond: #B084;
+	--width: 5cm;
+	animation: spin-vertical 8s infinite linear;
 }
-piece > fenetre {
-	text-align: center;
-	background-position: center;
-	background-size: contain;
-	transform-origin: center center;
-	background-color: #0CF2;
-	transform: rotateY(90deg) translateZ(-20em);
-}
-piece > fenetre.droite { transform: rotateY(90deg) translateZ(20em); }
-
-
 div.item {
 	border-radius: 4em;
 	background-color: lightgreen;
 }
 </style></head><body>
 <button onclick='turnLeft()'>gauche</button><button onclick='turnStraigth()'>centré</button><button onclick='turnRigth()'>droite</button>
+<trect>
+	<p>top</p>
+	<p>bottom</p>
+	<p>back</p>
+	<p>left</p>
+	<p>right</p>
+</trect>
 <piece class='semi-point'>
 	<div><fenetre></fenetre></div>
 	<div></div>
 	<div></div>
 	<div class='fenetre'></div>
 	<div class='fenetre'></div>
-	<fenetre class='droite'></fenetre>
+	<fenetre class='droite'>hello</fenetre>
 	<div class='item'>ok</div>
 </piece>
 </body></html>
