--- a/piece.html
+++ b/piece.html
@@ -9,6 +9,7 @@
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/structure.css'/>
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/perso.css' media='screen'/>
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/pave.css'/>
+<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/cylindre.css'/>
 <script type='text/javascript' src='file:///C:/wamp64/www/site-dp/library-js/piece.js'></script>
 <style type='text/css'>
 body {
@@ -17,27 +18,94 @@ body {
 }
 piece >*:nth-child(1), piece >*:nth-child(4), piece >*:nth-child(5) { background-color: coral; }
 piece >*:nth-child(2) { background-color: rosybrown; }
-fenetre { background-color: #0CF; }
-pave, toblerone, trect {
-	margin-left: 4cm;
-	margin-top: 4cm;
-	--fond: #B084;
-	--width: 10cm;
-	animation: spin-vertical 8s infinite linear;
-}
 div.item {
 	border-radius: 4em;
 	background-color: lightgreen;
 }
+fenetre { background-color: #0CF; }
+bevel {
+	margin-left: 4cm;
+	margin-top: 4cm;
+	--fond: #B084;
+	--width: 10cm;
+	--bevwidth: 0.6;
+	animation: spin-horizontal 8s infinite linear;
+/*
+	animation: spin-vertical 8s infinite linear;
+	transform: rotateX(90deg);
+*/
+}
+bevel >*:nth-child(1), bevel >*:nth-child(2){
+	border-radius: calc((1 - var(--bevwidth)) *50%);
+	transform-style: preserve-3d;
+}
+bevel >*:nth-child(n+3){
+	border: none;
+	transform-style: preserve-3d;
+	width: calc(100% * var(--bevwidth));
+	left: calc(var(--width) * (1 - var(--bevwidth)) /2);
+}
+bevel >*:nth-child(n+3):before, bevel >*:nth-child(n+3):after {
+	content: "";
+	width: calc(var(--width) * (1 - var(--bevwidth)) * 0.3826834323650897717284599840304);
+	height: inherit;
+	border: inherit;
+	background: inherit;
+	display: block;
+	position: absolute;
+	top: 0;
+	text-align: center;
+	background-position: center;
+	background-size: contain;
+}
+bevel >*:nth-child(n+3):before {
+	transform-origin: center left;
+	left: calc(var(--width) * (var(--bevwidth)) );
+	transform: rotateY(22.5deg);
+}
+bevel >*:nth-child(n+3):after {
+	transform-origin: center right;
+	left: calc(var(--width) * (var(--bevwidth) - 1) * 0.3826834323650897717284599840304);
+	transform: rotateY(-22.5deg);
+}
+/*
+bevel >*:nth-child(1):before, bevel >*:nth-child(1):after, bevel >*:nth-child(2):before, bevel >*:nth-child(2):after {
+	content: "";
+	width: 10%;
+	height: var(--height);
+	border: inherit;
+	background: inherit;
+	display: block;
+	position: absolute;
+	top: var(--width)
+	left: var(--width)
+	text-align: center;
+	background-position: center;
+	background-size: contain;
+	border: none;
+	transform: rotateX(90deg) rotateY(45deg) translateY(-50%);
+	background-color: orange;
+	transform-origin: center left;
+}
+*/
+/*
+b-c, b+ c* 0.35355339059327376220042218105242
+0,5857864376269049511983112757903
+0,7653668647301795434569199680608
+0,3826834323650897717284599840304
+*/
+
 </style></head><body>
 <button onclick='turnLeft()'>gauche</button><button onclick='turnStraigth()'>centré</button><button onclick='turnRigth()'>droite</button>
-<trect>
+
+<bevel>
 	<p>top</p>
 	<p>bottom</p>
 	<p>back</p>
 	<p>left</p>
 	<p>right</p>
-</trect>
+	<p>front</p>
+</bevel>
 <piece class='semi-point'>
 	<div><fenetre></fenetre></div>
 	<div></div>
