--- a/racines.html
+++ b/racines.html
@@ -30,10 +30,11 @@
 <svg id='cercle-trigo' version='1.1' width='400' height='400' xmlns='http://www.w3.org/2000/svg'>
 	<circle r='400' cx='0' cy='400' />
 	<line x1='0' y1='400' x2='400' y2='0' />
-	<line x1='0' y1='117.15728752538098' x2='400' y2='117.15728752538098' /><text x='10' y='140'>syn(45) ou r(2)</text>
+	<line x1='0' y1='117.15728752538098' x2='400' y2='117.15728752538098' /><text x='10' y='140'>syn(45)</text>
 	<path d='m 0,380 a 20,20 -45 0,1 20,0'/><text x='10' y='350'>45°</text>
 	<line x1='165.685424949238' y1='0' x2='400' y2='234.31457505076196' />
-	<line class='big' x1='0' y1='117.15728752538098' x2='165.685424949238' y2='0' />
+	<line class='big' x1='0' y1='117.15728752538098' x2='215.685424949238' y2='50' />
+	<line x1='140' y1='20' x2='380' y2='260' />	
 </svg>
 <svg version='1.1' width='100' height='100' xmlns='http://www.w3.org/2000/svg'>
 	<rect x='0' y='0' width='200' height='200' />
